--- a/src/app/content/nav.module.css
+++ b/src/app/content/nav.module.css
@@ -33,6 +33,7 @@
       }
    .listItem:hover{
     transform: scale(1.1);
+    border: 2px solid black;
    }
  .heading{
     font-family: Arial, Helvetica, sans-serif;
