--- a/src/app/content/page.module.css
+++ b/src/app/content/page.module.css
@@ -44,7 +44,7 @@
   cursor: pointer;
   transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
   justify-content: center;
-  margin: 20px 0;
+  /*margin: 10px 0;*/
   align-items: center;
 
 }
