--- a/src/app/Api/dropdown.module.css
+++ b/src/app/Api/dropdown.module.css
@@ -7,9 +7,12 @@
   
   .container h1 {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     font-family: 'Georgia';
     font-weight:bolder;
+    color:black;
+    width: 100%;
+    font-size: 40px;
   }
   
   .newsGrid {
@@ -19,11 +22,12 @@
   }
   
   .card {
-    background: #f9f9f9;
+    background:white;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.444);
     padding: 20px;
     transition: transform 0.2s ease;
+    font-size: 20px;
     
   }
   
@@ -40,7 +44,10 @@
   }
   
   .card p {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: #444;
   }
   
+  .date{
+    font-weight: bold;
+  }
