--- a/src/app/Map/component/panel.module.css
+++ b/src/app/Map/component/panel.module.css
@@ -30,18 +30,32 @@
   
   .menuItem {
     display: flex;
-    align-items: center;
     gap: 10px;
     font-size: 16px;
     cursor: pointer;
     padding: 10px;
     border-radius: 5px;
     outline: none;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    font-size: 20px;
+    
+    
   }
 
   
 
-
+  .menuItem select,
+  .menuItem input[type="date"] {
+    width: 150px;           
+    padding: 8px;         
+    font-size: 16px;       
+    border-radius: 5px;    
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
   .menuItem:hover{
     background:#005b7f;
 
@@ -60,6 +74,7 @@
     text-align: center;
     border-radius: 5px;
     transition: background 0.3s ease;
+    margin-left: 6px;
   }
   
   .submitButton:hover {
