--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,39 +1,47 @@
-.parent{
-    width: 100%;
+.parent {
+    width: 100%; 
     height: max-content;
-    padding-top: 20px;
+    margin: 0 auto; 
+    padding-top: 12px;
+    padding-bottom: 12px;
     background-color: black;
- 
-    padding-bottom: 20px;
-}
-.list{
+    margin-bottom: 10px;
+  }
+  
+  .list {
     display: flex;
-    gap: 200px;
-    list-style: none; 
-    font-family:Arial, Helvetica, sans-serif;
-   font-size: medium;
-   padding-left: 50px;
+    justify-content: space-around; 
+    align-items: center; 
+    gap: 100px; 
+    list-style: none;
+    font-family: Georgia, serif; 
+    font-size: large;
+    padding-left: 30px;
     padding-right: 20px;
     margin-top: -5px;
- 
-
-}
-.LinkItem{
-    text-decoration: none;
-    color:white;
- 
-   
-}
-
-    .listItem {
-       
-     text-align: center;
-     
-      
-        text-align: center;
-       
-
-      }
-   .listItem:hover{
+  }
+  
+  .listItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: transform 0.2s ease;
+  }
+  
+  .listItem:hover {
     transform: scale(1.1);
-   }
+  }
+  
+  .LinkItem {
+    text-decoration: none;
+    color: white;
+  }
+  
+  .iconStyle {
+    font-size: 32px; 
+    color: white;
+  }
+  
+  
+  
