--- a/src/app/disaster/disaster.module.css
+++ b/src/app/disaster/disaster.module.css
@@ -11,6 +11,16 @@
     padding-top: 50px;
 }
 
+.loadtext{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100vh;
+  padding-top: 20vh;
+  font-weight: bold;
+  font-size: 1.5rem; 
+
+}
 
 .background {
     position: absolute;
